erDiagram

    USER {
        int user_id PK
        string name
        string email
        string password
        string role          "visitor / staff / admin"
        datetime blocked_until
    }

    ORGANIZATION {
        int org_id PK
        string org_name
        string contact_email
    }

    EVENTTYPE {
        int type_id PK
        string type_name
    }

    EVENT {
        int eid PK
        int org_id FK
        int type_id FK
        string title
        string description
        string location
        string status         "draft / published / closed / archived"
        datetime created_at
        datetime updated_at
    }

    EVENT_SESSION {
        int session_id PK
        int eid FK
        datetime start_time
        datetime end_time
        int capacity
        int current_registered
        int waiting_list_limit
        string status         "open / closed"
    }

    TAG {
        int tag_id PK
        string tag_name
    }

    EVENT_TAG {
        int eid FK
        int tag_id FK
    }

    REGISTRATION {
        int user_id FK
        int session_id FK
        datetime register_time
        string status           "registered / waiting / cancelled"
        datetime checkin_time
        int queue_position
    }

    AUDIENCE_GROUP {
        int group_id PK
        string group_name
        string description
        bool is_default
    }

    EVENT_USER_GROUP {
        int user_id FK
        int eid FK
        int group_id FK
    }

    USER ||--o{ REGISTRATION : "makes"
    EVENT ||--o{ EVENT_SESSION : "has"
    EVENT_SESSION ||--o{ REGISTRATION : "receives"
    EVENTTYPE ||--o{ EVENT : "categorizes"
    ORGANIZATION ||--o{ EVENT : "hosts"
    EVENT ||--o{ EVENT_TAG : ""
    TAG ||--o{ EVENT_TAG : ""
    AUDIENCE_GROUP ||--o{ EVENT_USER_GROUP : "assigned"
    USER ||--o{ EVENT_USER_GROUP : ""
    EVENT ||--o{ EVENT_USER_GROUP : ""